# podcast_english

./: .gitignore  README.md  pyproject.toml  run.py
data/: config.json
data/series/001/: series.json
data/series/002/: series.json
data/series/003/: series.json
src/: config.py  main.py
src/generators/: audio_generator.py  subtitle_generator.py  video_generator.py
src/models/: series.py
src/utils/: path_manager.py
